--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -317,6 +317,7 @@ h1 {
     font-size: 24px;
     border: none;
     margin-top 10px;
+    transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
 
@@ -329,6 +330,11 @@ form input {
 
 .btn-form{
     outline: none;
+}
+
+.btn-form:hover{
+    background-color: #d63728;
+    cursor: pointer;
 }
 
 form input:focus {
@@ -377,6 +383,13 @@ input[type=submit] {
     background-color: #d62828;
     border: 1px solid #d62828;
     color: #fff;
+}
+
+.btn-banner:hover,
+.btn-banner:active,
+input[type=submit]:hover,
+input[type=submit]:active {
+    background-color: #d63728;
 }
 
 .btn-ghost:link,
