FInal with mailer

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,7 +19,9 @@ body {
 /* ----------------------------------------------- */
 /* REUSABLE */
 /* ----------------------------------------------- */
-
+.soc{
+    text-decoration: none!important;
+}
 .row {
     max-width: 1140px;
     margin: 0 auto;
@@ -292,7 +294,6 @@ header {
 .hero-text-box {
     width: 70%;
     padding-top: 300px;
-    ;
     padding-left: 20%;
     z-index: 0;
     overflow-x: hidden;
@@ -563,6 +564,24 @@ footer{
         text-align: center;
         margin-bottom: 20px;
     }
+    h1{
+       font-size: 160%; 
+    }
+    .hero-text-box{
+        padding-top: 100px;
+    }
+    h3{
+        font-size: 120%;
+    }
+    section h2{
+        font-size: 150%;
+    }
+    h4{
+        font-size: 140%;
+    }
+    input{
+        width: 70%;
+    }
 }
 
 /* ----------------------------------------------- */
@@ -614,6 +633,13 @@ footer{
     .col-2{
         max-width: 100%;
     }
+    .col-4 p,
+    .col-2 p,
+    .specialc
+    {
+    padding-left: 7%;
+        padding-right: 7%;
+    }
     .about-img{
         padding-left: 7%;
         padding-right: 7%;
@@ -621,6 +647,9 @@ footer{
     section{
         padding-left: 1%;
         padding-right: 1%;
+    }
+    .hero-text-box{
+        padding-top: 100px;
     }
 }
 
